Fixes #5: changing 'metronomy' to 'metronomE' lol

--- a/views/metronome.html
+++ b/views/metronome.html
@@ -1,4 +1,4 @@
-<div ng-controller="MetronomyController as ctrl">
+<div ng-controller="MetronomeController as ctrl">
     <div class="form-group">
         <label for="beats">beats</label>
         <select class="form-control" id="beats" ng-model="ctrl.beats">
