Refs #8: adding new fretboard directive. It is a small fretboard

--- a/styles/fretboard.css
+++ b/styles/fretboard.css
@@ -137,6 +137,7 @@ h1 {
 .guitar-neck .notes .mask ul {
     position: relative;
     float: left;
+    right: 35px;
 }
 
 .guitar-neck .notes .mask ul li {
