Refs #5: creating a Service for the Metronome.

--- a/views/metronome.html
+++ b/views/metronome.html
@@ -1,4 +1,4 @@
-<div ng-controller="MetronomeController as ctrl">
+<div>
     <div class="form-group">
         <label for="beats">beats</label>
         <select class="form-control" id="beats" ng-model="ctrl.beats" ng-change="ctrl.reset()">
